k8/notes_connect-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: notes_connect
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/notes_connect: "true"
  podSelector:
    matchLabels:
      io.kompose.network/notes_connect: "true"
